# tw

./: Dockerfile  Makefile  README.md  compose.dev.yml  compose.yml  pyproject.toml
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/tickers/: page.tsx
frontend/components/: mode-toggle.tsx
src/tw/: __init__.py  celery_app.py  db.py  main.py
src/tw/api/: stock.py
src/tw/model/: earnings.py  stock.py
src/tw/tasks/: __init__.py  debug.py  earnings.py  stocks.py
