[project]
name = "tw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "celery[redis]>=5.3",
    "fastapi[standard]>=0.120.2",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "watchdog>=3.0.0",
    "yfinance>=0.2.66",
]
